--- a/Notebook/Phase05.Part01.Conclusion_and_Reflection.ipynb
+++ b/Notebook/Phase05.Part01.Conclusion_and_Reflection.ipynb
@@ -16,9 +16,9 @@
     "Currently, during all of the process of this project, I can come up with some conclusion about the current real estate for sale market in Ho Chi Minh City:\n",
     "- There is an uneven distribution of properties by districts in Ho Chi Minh City, result in each district will have its signature type of real estate, know this information will help us save more time when find a potential position real estate, while we can take more concern in a heavy density location, and remove uncessary region.\n",
     "\n",
-    "- Beside that , the current price of each real estate types are also considerable:\n",
-    "    - There is a very high differences between prices of each types across district. Some can be very cheap, but some can also very expensive. I beleive that beside the current location, there are many factors that we can consider.\n",
-    "    "
+    "- Beside that , the current price of each real estate types are also considerable. There is a very high differences between prices of each types across district. Some can be very cheap, but some can also very expensive. Beside the current location, there are many factors that can affect to the price too.\n",
+    "\n",
+    "Anyway, by doing this process, I gain more knowledge about the current sale market of real estate in Ho Chi Minh City. At this time, this may be seem meaningless (while I don't have any need and cannot affort to buy a real estate too). But I think they will be helpful in the future."
    ]
   },
   {
@@ -45,10 +45,14 @@
     "    - Also, with the categorical columns, the problem here is `Natural language processing`, while most of data is not in a consistent format. Also, there will be missing or errors in some character. So in this process, I have to ignore some specific situation and get more concern to the more popular one. So the result may be not the best, but I think it is good enough for our analysis. And practically, I don't use the data in these columns too much.\n",
     "\n",
     "- Making meaningful questions: \n",
-    "    - In this part, we end up to some not simple question, and I have to find find the simplest way to present my ideas to ensure easy access to the information for everyone.\n",
+    "    \n",
+    "    For me, this is the most challenge steps, a quality question always require us to think more, reseach more, and place ourselves into a scenario to find out a question which have the meaning, and helpful in this context. \n",
+    "    - In this part, we end up to some not simple question, I have thought many times that what fields I should get more concern? What I really want from the question? What is the context of it? Also, I have to find find the simplest way to present my ideas to ensure easy access to the information for everyone.\n",
     "- Build Model:\n",
     "    - This field is new for me, while I do not have many experience to build a machine learning model, but it also very interesting to find out some new knowledge.\n",
-    "- Some difficulties come from my self: During this project, the lack of skills (consist of time management skill, technical skill and others) all make me so confused and took more time for the problem solving. My teammate , Tu Nhi, also help me a lot in this project, I want to give a special thanks to her.\n",
+    "- Some difficulties come from my self: \n",
+    "\n",
+    "During this project, the lack of skills (consist of time management skill, technical skill and others) all make me so confused and took more time for the problem solving. My teammate , Tu Nhi, also help me a lot in this project, I want to give a special thanks to her.\n",
     "\n",
     "## **What I learn from this project:**\n",
     "Those are what I have learnt while doing this project:\n",
@@ -97,7 +101,8 @@
     "    - The asking question process: In this process we also ask the same three questions, but the approach is different.\n",
     "\n",
     "    With Tu Nhi's approach, she get into the problem in many different way, breaks it down into smaller parts to handle one by one, so in a broader view, we can see and access to the problem in many different view, obtain more information, not just the answer to the question. By using this approach, we can have an overview of the entire picture and gain more insights. The answer to the question is just a part of the picture.\n",
-    "        - About the plot:\n",
+    "    \n",
+    "    - About the plot:\n",
     "    \n",
     "    Most of plot she use is the heatmap, that present the level of data, or the correalation by the color. In genral, it looks like a stacked bar chart, but instead of present the differences between data by the width or length of the bar, heatmap present them by color. Therefore, the data could be presented more clearly, it will eliminate the situation that there is a super large difference betweem values in data, so one column is so high, and others are just a little (We can see this problem in my stacked bar plot). Also, the tree map is also a good approach when we want to compare many features.\n",
     "\n",
