--- a/Notebook/Phase03.Part01.Asking_selling_questions.ipynb
+++ b/Notebook/Phase03.Part01.Asking_selling_questions.ipynb
@@ -5143,7 +5143,7 @@
    "source": [
     "We can see that , among all type, the average price of `Căn hộ chung cư` is the least, while the average price of `Nhà mặt phố` and `Nhà biệt thự, liền kề` are the highest, nearly much more than `Căn hộ chung cư` three times.\n",
     "\n",
-    "#### **2.3.2 The price distriution for each types across districts.**\n",
+    "#### **2.3.2 The price distribution for each types across districts.**\n",
     "Now, we will make a deeper analysis for the price of each type, how are its price distributed across districts."
    ]
   },
@@ -14762,8 +14762,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- In the case of `Nhà biệt thự, liền kề`, most of price fall within a high price range, typically `> 5 billion`. This type are considered as high-level, luxury real estate options just for some specific individuals or families seeking premium housing. The elevated prices of these property types have the strong correlation with their exclusivity, unique features. So this is not suprise for the super high price in this type.\n",
+    "- In the case of `Nhà biệt thự, liền kề`, most of price fall within a high price range, typically `> 5 billion`.But look at the amount of them compare with `Nhà mặt phố`, we can see that `Nhà biệt thự, liền kề` is less porpular than these types of real estate above.\n",
+    "\n",
+    "- `Nhà biệt thự, liền kề` is considered as high-level, luxury real estate options just for some specific individuals or families seeking premium housing. The elevated prices of these property types have the strong correlation with their exclusivity, unique features. So this is not suprise for the super high price in this type.\n",
+    "\n",
     "- There still about 20% of `Nhà biệt thự, liền kề` in `District 12` have the price `<5 billion`, but it just take a little in the amount.\n",
+    "\n",
     "- But for the choices, we can consider `District 9`, which both have a various selections (over 500) and a good average price (nearly `15 billion`)."
    ]
   },
@@ -17127,7 +17131,7 @@
    "metadata": {},
    "source": [
     "With `Đất bán`, the price distribution are various among districts, but we can divide them in three groups: Low-price district, medium-price district  and High-price district.\n",
-    "- `Low-price district`: In general, the price that `< 5 billion` mostly concerntrate in `District 12`, `Bình Chánh`, `Bình Tân`, `Củ Chi`, `Hóc Môn`, `Nhà Bè`. These districts are suitable to find a cheaper land for sale. Among them, account for 98% of price in this range, `Củ Chi` is the district have the cheapest price.\n",
+    "- `Low-price- district`: In general, the price that `< 5 billion` mostly concerntrate in `District 12`, `Bình Chánh`, `Bình Tân`, `Củ Chi`, `Hóc Môn`, `Nhà Bè`, `Cần Giờ`. These districts are suitable to find a cheaper land for sale. Among them, account for 98% of price in this range, `Củ Chi` is the district have the cheapest price.\n",
     "- `Medium-price district`: These district will have the distribution much more equaly for all price range, and not skew to any side. These are `District 9`, `Thủ Đức`. Go along the high amount of land for sale, there also many options of price so it's more easy to find a suitable one with our demand. So they all so will be potential options to find a land for sale.\n",
     "- `High-price district`: in these district, the price is much more higher, from `5 billion` and can be `>30 billion`, they are `District 2`, `District 3`, `Bình Thạnh`, `District 7`, `Gò Vấp`, `Tân Bình`, `Tân Phú`, `District 1`."
    ]
@@ -19330,7 +19334,7 @@
     "**Conclusion:**\n",
     "Overall, there is differences between the price's distribution for each type of real estate:\n",
     "\n",
-    "- While there are more diffrences of price among districts in `Nhà riêng`, `Căn hộ chung cư` and `Đất bán`, the others types share the same trend in the `Price`. The reason here is the total number of `Nhà riêng` and `Căn hộ chung cư` sample that we collected is much more than other types, and account for most of samples in the dataset. Because of that, there will be a wider range of the features and attributes that can be found in the dataset. As a result, the price distribution within these types shows greater variability and abundance of options among different districts.\n",
+    "- While there are more diffrences of price among districts in `Nhà riêng`, `Căn hộ chung cư`, `Đất bán` and `Đất nền dự án`, the others types share the same trend in the `Price`. The reason here is the total number of `Nhà riêng` and `Căn hộ chung cư` sample that we collected is much more than other types, and account for most of samples in the dataset. Because of that, there will be a wider range of the features and attributes that can be found in the dataset. As a result, the price distribution within these types shows greater variability and abundance of options among different districts.\n",
     "- Look through all the types, we can find some districts which have prominent price (cheaper or higher) than others:\n",
     "    - `District 12`: With the super high percentage of low price for `Nhà riêng`, `Căn hộ chung cư`, `Đất bán`, also have low overall price in expensive types like `Nhà mặt phố`, `Nhà biệt thự liền kề` and `Đất nền dự án`. This is the most suitable district to have a good property with low income.\n",
     "    - `District 1`: The price here, for all types, are always in a higher range than most of other district, especially in `Nhà riêng` and `Nhà mặt phố`. \n",
