--- a/Notebook/Phase05.Part01.Conclusion_and_Reflection.ipynb
+++ b/Notebook/Phase05.Part01.Conclusion_and_Reflection.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "## **A cross-review:**\n",
     "\n",
-    "Finally, let's make a cros-review to get a\n"
+    "In this section, let's make a cros-review for my teamate, Tu Nhi\n"
    ]
   },
   {
@@ -115,6 +115,22 @@
     "- Weakness:\n",
     "    - Just some thing about the plot, her heatmap currently, have many meanings. We can extract more information from this, but in general, we can see their format is not very good. May be in the first time looking to it, there will be some confused about the insights of the plot. I think that just one thing she could improve in her work.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Reference:**\n",
+    "\n",
+    "First, I want to give a thanks to ChatGPT, it helps me a lot in many problems, like fixing bugs.\n",
+    "\n",
+    "Finally, these are some reference for my work during this project:\n",
+    "- Anon. n.d.-d. “Plotly.” Retrieved (https://plotly.com/python/).\n",
+    "- Anon. n.d.-a. “Deploy Your App - Streamlit Docs.” Retrieved (https://docs.streamlit.io/streamlit-community-cloud/deploy-your-app).\n",
+    "- Víquez, Santiago. 2023. “How to Deploy Machine Learning Models with Python & Streamlit.” 365 Data Science. Retrieved (https://365datascience.com/tutorials/machine-learning-tutorials/how-to-deploy-machine-learning-models-with-python-and-streamlit/).\n",
+    "- Sharma, Natasha. 2021. “Ways to Detect and Remove the Outliers - towards Data Science.” Medium, August 8.\n",
+    "- Flyboy. n.d. “GitHub - Flyboy13/NM-KHDL: Đồ Án KHDL.” GitHub. Retrieved (https://github.com/flyboy13/NM-KHDL)."
    ]
   }
  ],
