--- a/Notebook/Phase03.Part02.Asking_renting_questions.ipynb
+++ b/Notebook/Phase03.Part02.Asking_renting_questions.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4348,7 +4348,7 @@
     "- `Kho, nhà xưởng, đất`:   \n",
     "        Most expensive: `Tân Phú District` - ranked 15th in area.   \n",
     "        Largest in area: `Củ Chi District` - ranked 6th most expensive.   \n",
-    "        -> There are **no correlation** between price and area for this property type.   \n",
+    "        -> There are **no correlation** between price and area for this property type. But taken into account we can still see that this property type cost more because of the scale of area, as this type of property take up almost of the size of the graph.\n",
     "\n",
     "- `Văn phòng:`:  \n",
     "        Most expensive: `District 11` - ranked 1st in area.   \n",
