--- a/Notebook/Phase05.Part02.Conclusion_and_Reflection.ipynb
+++ b/Notebook/Phase05.Part02.Conclusion_and_Reflection.ipynb
@@ -170,6 +170,27 @@
     "\n",
     "And thank you for reading. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Refrerences\n",
+    "\n",
+    "Most of refrerences that I used for this projects are for learning about training models. Other than that, I used ChatGPT 3.5 for guidance.\n",
+    "\n",
+    "1. [Using Linear Models for t-tests and ANOVA, Clearly Explained!!!. YouTube.](https://www.youtube.com/watch?v=NF5_btOaCigStatQuest) with Josh Starmer. (2018a, February 5). \n",
+    "2. [StatQuest: Random Forests Part 1 - Building, using and Evaluating. YouTube.](https://www.youtube.com/watch?v=J4Wdy0Wc_xQStatQuest) with Josh Starmer. (2018b, April 24). \n",
+    "3. [Machine Learning Fundamentals: Cross validation](https://www.youtube.com/watch?v=fSytzGwwBVwStatQuest) with Josh Starmer. (2018c, September 24). \n",
+    "4. [Regularization Part 1: Ridge (L2) regression](https://www.youtube.com/watch?v=Q81RR3yKn30StatQuest) with Josh Starmer. (2018d, October 1). \n",
+    "5. [Regularization Part 2: Lasso (L1) regression](https://www.youtube.com/watch?v=NGf0voTMlcsStatQuest) with Josh Starmer. (2019, August 20). \n",
+    "6. [Regression trees, clearly explained!!!](https://www.youtube.com/watch?v=g9c66TUylZ4StatQuest) with Josh Starmer. (2020, January 15). \n",
+    "7. [StatQuest: Random Forests Part 2: Missing data and clustering](https://www.youtube.com/watch?v=sQ870aTKqiMStatQuest) with Josh Starmer. (2022a, November 18). \n",
+    "8. [Linear regression, clearly explained!!!](https://www.youtube.com/watch?v=7ArmBVF2dCsStatQuest) with Josh Starmer. (2022b, November 18). \n",
+    "9. [Multiple regression, clearly explained!!!](https://www.youtube.com/watch?v=EkAQAi3a4jsStatQuest) with Josh Starmer. (2022c, November 18). \n",
+    "10. [R-squared, clearly explained!!!](https://www.youtube.com/watch?v=bMccdk8EdGo) with Josh Starmer. (2022c, November 18)\n",
+    "11. [Normalized Nerd. (2021, August 13). GridSearchCV | Hyperparameter Tuning | Machine Learning with Scikit-Learn Python YouTube](https://www.youtube.com/watch?v=TvB_3jVIHhgStatQuest) with Josh Starmer. (2017, August 7). "
+   ]
   }
  ],
  "metadata": {
