--- a/Notebook/Phase05.Part01.Conclusion_and_Reflection.ipynb
+++ b/Notebook/Phase05.Part01.Conclusion_and_Reflection.ipynb
@@ -123,14 +123,14 @@
    "source": [
     "## **Reference:**\n",
     "\n",
-    "First, I want to give a thanks to ChatGPT, it helps me a lot in many problems, like fixing bugs.\n",
+    "First, I want to give a thanks to ChatGPT for helping me in many problems.\n",
     "\n",
     "Finally, these are some reference for my work during this project:\n",
     "- Anon. n.d.-d. “Plotly.” Retrieved (https://plotly.com/python/).\n",
     "- Anon. n.d.-a. “Deploy Your App - Streamlit Docs.” Retrieved (https://docs.streamlit.io/streamlit-community-cloud/deploy-your-app).\n",
     "- Víquez, Santiago. 2023. “How to Deploy Machine Learning Models with Python & Streamlit.” 365 Data Science. Retrieved (https://365datascience.com/tutorials/machine-learning-tutorials/how-to-deploy-machine-learning-models-with-python-and-streamlit/).\n",
     "- Sharma, Natasha. 2021. “Ways to Detect and Remove the Outliers - towards Data Science.” Medium, August 8.\n",
-    "- Flyboy. n.d. “GitHub - Flyboy13/NM-KHDL: Đồ Án KHDL.” GitHub. Retrieved (https://github.com/flyboy13/NM-KHDL)."
+    "- GeeksforGeeks. 2023. “Hyperparameter Tuning.” GeeksforGeeks. Retrieved (https://www.geeksforgeeks.org/hyperparameter-tuning/)."
    ]
   }
  ],
