--- a/Notebook/Phase01.Part01.Collect_selling_data.ipynb
+++ b/Notebook/Phase01.Part01.Collect_selling_data.ipynb
@@ -22,7 +22,9 @@
    "source": [
     "import pandas as pd \n",
     "from bs4 import BeautifulSoup\n",
+    "# !pip install selenium\n",
     "from selenium import webdriver\n",
+    "# !pip install cloudscraper\n",
     "import cloudscraper\n",
     "import re"
    ]
@@ -109,7 +111,7 @@
     "    # The parsing data process\n",
     "    unprocessed_num_page = soup.find(class_ = 're__pagination-group')\n",
     "    driver.quit()\n",
-    "\n",
+    "    # Regex to find all the current numpages in the screen.\n",
     "    regex = r'[^\\s]+'\n",
     "    matchs = re.findall(regex, unprocessed_num_page.text)\n",
     "    new_array = []\n",
@@ -135,6 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get num of total pages in the website.\n",
     "total_page = GetTotalPage(url)"
    ]
   },
