--- a/Notebook/Phase02.Part01.Process_selling_data.ipynb
+++ b/Notebook/Phase02.Part01.Process_selling_data.ipynb
@@ -26,6 +26,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
+    "# !pip install unicodedata\n",
     "import unicodedata\n",
     "import seaborn as sns"
    ]
@@ -419,6 +420,7 @@
     }
    ],
    "source": [
+    "# Finf the missing value\n",
     "def missing_ratio(column):\n",
     "    missing_values = column.isnull().sum()\n",
     "    total_values = len(column)\n",
@@ -876,6 +878,7 @@
     "column_list = ['Bedroom', 'Toilet', 'Floor']\n",
     "unit_dict = {}\n",
     "\n",
+    "# Extract the value and unit into list, then store them into a dictionary\n",
     "for column in column_list:\n",
     "    column_mask = real_estate_for_sale_df[column].notna()\n",
     "    column_values = real_estate_for_sale_df.loc[column_mask, column]\n",
@@ -906,6 +909,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the new value and convert the data type into float\n",
     "for key, value in unit_dict.items():\n",
     "    real_estate_for_sale_df.loc[value[1], key] = value[2]\n",
     "    real_estate_for_sale_df[key] = real_estate_for_sale_df[key].astype('float64')\n"
@@ -1109,6 +1113,7 @@
     "  \n",
     "    normalized_furniture = unicodedata.normalize('NFC', furniture.lower())\n",
     "\n",
+    "    # Find and set the funiture status based on the keywords\n",
     "    if any(keyword in normalized_furniture for keyword in deluxe_furniture_keywords):\n",
     "        return \"Nội thất sang trọng\"\n",
     "    elif any(keyword in normalized_furniture for keyword in fully_furniture_keywords) or len(normalized_furniture.split(',')) >= 4:\n",
@@ -1187,6 +1192,7 @@
     "\n",
     "    normalized_legal = unicodedata.normalize('NFC', legal.lower())\n",
     "    \n",
+    "    # Set legality status based on the keywords\n",
     "    legal = normalized_legal.lower().strip()\n",
     "    if any(keyword in legal for keyword in full_legal_keywords):\n",
     "        return 'Sổ đỏ và sổ hồng'\n",
