--- a/Notebook/Phase03.Part01.Asking_selling_questions.ipynb
+++ b/Notebook/Phase03.Part01.Asking_selling_questions.ipynb
@@ -20,9 +20,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "# !pip install plotly\n",
     "import plotly.express as px\n",
-    "from plotly.subplots import make_subplots\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "# !pip install scikit-learn\n",
     "from sklearn.preprocessing import OrdinalEncoder\n"
    ]
   },
@@ -4125,6 +4125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Find the average price of each type\n",
     "price_by_type_df = real_estate_for_sale_df.copy().groupby('Type')['Price(VNĐ)'].agg('mean').reset_index()\n",
     "price_by_type_df = price_by_type_df.sort_values(by=['Price(VNĐ)'], ascending=[False])"
    ]
@@ -5191,6 +5192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the bins\n",
     "price_bins = {\n",
     "    '< 1 billion' : (0, 1000000000),\n",
     "    '1 billion - 5 billion' : (1000000000, 5000000000),\n",
@@ -19425,7 +19427,7 @@
     "real_estate_df_by_type = {}\n",
     "\n",
     "for house_type in unique_types:\n",
-    "\n",
+    "    # Extract the real estates in each type and store into the dictionary\n",
     "    current_type_df = real_estate_price[real_estate_price['Type'] == house_type].copy().reset_index()\n",
     "    current_type_df = current_type_df.drop(columns=['index'])\n",
     "    \n",
@@ -19466,10 +19468,9 @@
     }
    ],
    "source": [
+    "# Drop unecessary columns for these types\n",
     "real_estate_df_by_type['Đất bán'].drop(columns = ['Bedroom(Phòng)', 'Toilet(Phòng)', 'Floor(Tầng)', 'Furniture'], inplace = True)\n",
-    "real_estate_df_by_type['Đất nền dự án'].drop(columns = ['Bedroom(Phòng)', 'Toilet(Phòng)', 'Floor(Tầng)', 'Furniture'], inplace = True)\n",
-    "\n",
-    "real_estate_df_by_type['Nhà riêng']['Legal'].value_counts()"
+    "real_estate_df_by_type['Đất nền dự án'].drop(columns = ['Bedroom(Phòng)', 'Toilet(Phòng)', 'Floor(Tầng)', 'Furniture'], inplace = True)"
    ]
   },
   {
@@ -19593,6 +19594,7 @@
    "outputs": [],
    "source": [
     "real_estate_df_by_type_district = {}\n",
+    "# Perform one hot encoding for District column.\n",
     "for type in real_estate_df_by_type:\n",
     "    df = real_estate_df_by_type[type]['District']\n",
     "    df = pd.get_dummies(df, columns=['District'])\n",
