--- a/Notebook/Phase04.Part01.Build_selling_data_models.ipynb
+++ b/Notebook/Phase04.Part01.Build_selling_data_models.ipynb
@@ -33,9 +33,8 @@
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
     "import seaborn as sns\n",
+    "# !pip install joblib\n",
     "import joblib\n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
@@ -94,6 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop unncessary columns\n",
     "apartment_df = apartment_df.copy()\n",
     "apartment_df.drop(columns= ['Project', 'Posting date'], axis= 1, inplace= True)"
    ]
@@ -128,6 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Perform one hot encoding for District\n",
     "apartment_df = pd.get_dummies(apartment_df, columns=['District'])\n",
     "apartment_df.drop(columns=['Type'], inplace= True)"
    ]
@@ -145,8 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract price the is not Thỏa thuận for the traning model.\n",
     "processed_apartment_df = apartment_df[apartment_df['Price(VNĐ)'].notna()]\n",
-    "data_to_predict_df = apartment_df[apartment_df['Price(VNĐ)'].isna()]\n"
+    "data_to_predict_df = apartment_df[apartment_df['Price(VNĐ)'].isna()]"
    ]
   },
   {
@@ -174,6 +176,7 @@
     }
    ],
    "source": [
+    "# Set new unit for Price to get more effecienct in the train process.\n",
     "processed_apartment_df .loc[:,'Price(VNĐ)'] = processed_apartment_df.loc[:,'Price(VNĐ)'] / 1000000\n",
     "processed_apartment_df.rename(columns= {'Price(VNĐ)' : 'Price (Million)'}, inplace=True)"
    ]
@@ -205,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Define X and y features.\n",
     "X = processed_apartment_df.drop(columns=['Price (Million)'])\n",
     "y = processed_apartment_df['Price (Million)']\n",
     "\n",
