--- a/Notebook/Phase03.Part01.Asking_selling_questions.ipynb
+++ b/Notebook/Phase03.Part01.Asking_selling_questions.ipynb
@@ -187,7 +187,7 @@
    "metadata": {},
    "source": [
     "### **2.2 Question 01: How the numbers of real estate is distributed by the district in Ho Chi Minh City? Which district have the most real estate? Which type of real estate is the signature for each district?**\n",
-    "As a buyer, when we have need to find a real estate, we want to choose the best real esate that fit most with our requirement. But before that, we should know about the current status of real estate market for the district we intend to find. By answering this question, we will know get more knowledge about the current distribution of each real estate type across district.\n",
+    "As a buyer, when we have need to find a real estate, we want to choose the best real esate that fit most with our requirements. But before that, we should know about the current state of real estate market of the district we intend to find. By answering these questions, we will get more knowledge about the current distribution of each real estate type across districts.\n",
     "\n",
     "First, let's extract the column `Type` and `District` of dataframe."
    ]
@@ -1256,6 +1256,7 @@
     "\n",
     "district_count.sort_values(ascending = False ,by='count', inplace= True)\n",
     "mean_of_count = np.mean(district_count['count'])\n",
+    "\n",
     "fig = px.bar(district_count,\n",
     "              x='count',\n",
     "              y='District', orientation='h', color='count',\n",
@@ -19832,7 +19833,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -19846,7 +19847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
